--- a/src/locales/zh/messages.json
+++ b/src/locales/zh/messages.json
@@ -45,8 +45,8 @@
   "Title": "标题",
   "Total {total} Items": "总共 {total} 条记录",
   "Unpublished": "未发布",
-  "Update": "更新",
-  "Update User": "更新用户",
+  "Update": "修改",
+  "Update User": "修改用户",
   "Username": "用户名",
   "Views": "浏览数",
   "Visibility": "可见性",
